--- a/module.yml
+++ b/module.yml
@@ -18,13 +18,14 @@ esmodules:
   - twitch-chat.mjs
 styles:
   - twitch-chat.css
+socket: true
 url: "https://github.com/patrickporto/twitch-chat"
 manifest: "https://github.com/patrickporto/twitch-chat/releases/download/1.0.1/module.json"
 download: "https://github.com/patrickporto/twitch-chat/releases/download/1.0.1/twitch-chat.zip"
 readme: "https://github.com/patrickporto/twitch-chat/blob/main/README.md"
 changelog: "https://github.com/patrickporto/twitch-chat/releases"
 bugs: "https://github.com/patrickporto/twitch-chat/issues"
-dependencies: 
+dependencies:
   - name: "_chatcommands"
     type: "module"
     manifest: "https://github.com/League-of-Foundry-Developers/Chat-Commands-Lib/releases/download/1.2.0/module.json"
